--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 html {
   height: 100%;
   width: 100%;
@@ -8,6 +10,9 @@ body {
   min-height: 100%;
   min-width: 100%;
   background: linear-gradient(pink, violet);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 button {
@@ -35,3 +40,38 @@ button {
   border-radius: 5px;
   box-shadow: 2px 5px 5px #333;
 }
+
+li button {
+  background-color: red;
+  color: white;
+  border: 0.8px solid black;
+  border-radius: 50%;
+  margin-left: 1em;
+  cursor: pointer;
+}
+p {
+  display: flex;
+}
+div {
+  margin: 1em;
+}
+div#datesandpriority {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+select {
+  height: 100%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+div#taskdesc {
+  display: flex;
+  gap: 0.5em;
+}
+
+
